# AutoGame

./: .gitignore  AutoGame 使用说明.md  Macro.py  README.md  chk_api.py  chk_fm.py  chk_main.py  chk_pm.py  chk_sm.py  debug2.js  edit_api.py  edit_css.py  edit_fm.py  edit_main.py  edit_scrcpy.py  edit_scrcpy2.py  edit_vue.py  edit_vue2.py  final_verify.js  fix_all.py  fix_api.js  fix_api2.js  fix_api2.py  fix_brace.js  fix_brace2.js  fix_css.js  fix_css2.js  fix_css3.js  fix_dpad_close.js  fix_exec_frontend.js  fix_executor.py  fix_final.py  fix_orphan.js  fix_orphan2.js  fix_orphan3.js  fix_overlay.js  fix_overlay2.js  fix_pm.py  fix_scrcpy2.js  fix_vue2.js  (+28 more)
data/config/: config.json
data/key_mapping/: 默讛问key.json  默讻问key.json
data/macrofile/: A示例文件.json  新建文件1.json
docs/: github-workflow.md
docs/superpowers/specs/: 2026-06-01-screen-swipe-macro-design.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.css  App.vue  window.d.ts
frontend/src/components/: Filelist.css  Filelist.vue  Jsoneditor.css  Jsoneditor.vue  KeymouseControl.css  KeymouseControl.vue  Logeditor.css  Logeditor.vue  ScreenCastCore.css  ScreenCastCore.vue  ScreenCastKeyMapping.css  ScreenCastKeyMapping.vue  ScreenCastToolbar.css  ScreenCastToolbar.vue  ScreenCastView.css  ScreenCastView.vue  ScreenCastView_new.css  ScreenCastView_orig.css  Screencast.css  Screencast.vue  Settings.css  Settings.vue  Sidebar.vue  script_temp.txt
frontend/src/composables/: useScreencastApi.ts
src/: api.py  api_restored.py  file_manager.py  key_mapping_executor.py  key_mapping_executor_new.py  key_mapping_hook.py  logger.py  macro.py  macro_file.py  ocr.py  path_manager.py  scrcpy_manager.py  scrcpy_manager_original.py  webview2_checker.py
