[project]
name = "AutoGame"
version = "3.3.7"
description = "AutoGame 是一个基于 Python 的自动化工具，支持前后台键鼠、图色、文字识别、手机投屏、按键映射等功能。"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}

authors = [
  {name = "YorickFin", email = "1582456060@qq.com"},
]

dependencies = [
    "autoxkit>=2.1.1",
    "numpy<2.0.0",
    "onnxruntime-gpu==1.14.1",
    "opencv-contrib-python==4.7.0.72",
    "opencv-python-headless==4.7.0.72",
    "pillow>=12.2.0",
    "pyclipper>=1.4.0",
    "pystray>=0.19.5",
    "pywebview>=6.2.1",
    "shapely>=2.1.2",
    "tomli>=2.4.1",
    "websockets>=14.0",
]

[urls]
homepage = "https://github.com/YorickFin/AutoGame"
instructions = "https://docs.qq.com/markdown/DVVdYSXNTcWpZZHNN?"
